New router, dashboard update

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -9,8 +9,21 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
   <title>Device dashboard</title>
+
+  <style>
+    canvas {
+      display: block;
+      width: 100%;
+      border: 1px solid #000;
+    }
+
+    #connection_chart {
+      box-sizing: border-box;
+      width: 95%;
+      height: 500px;
+    }
+  </style>
 </head>
 
 <body>
@@ -19,7 +32,10 @@
       <div class="col-sm-3"></div>
       <div class="col-sm-9">
         <h1>Device dashboard</h1>
-        <div id="connection_chart"></div>
+        <div class="row">
+          <div id="connection_chart"></div>
+          <div id="application_menu"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -35,7 +51,12 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="services/connectionCache.js"></script>
+  <script src="components/chartComponent.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 
 </html>
