--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -20,7 +20,7 @@
 
     #connection_chart {
       box-sizing: border-box;
-      width: 95%;
+      width: 100%;
       height: 500px;
     }
   </style>
@@ -29,8 +29,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-3"></div>
-      <div class="col-sm-9">
+      <div class="col-sm-10 offset-sm-1">
         <h1>Device dashboard</h1>
         <div class="row">
           <div id="connection_chart"></div>
