--- a/pages/index.html
+++ b/pages/index.html
@@ -39,8 +39,6 @@
       }
 
       function getDivForRecord(record) {
-        console.log('record: ' + record);
-
         const component = $('<div>').addClass('col-md-4')
           .html(`<div class="card mb-4 box-shadow">
                   <div class="card-body">
@@ -69,16 +67,12 @@
             return devices;
           })
           .catch(function (error) {
-            console.log(error);
             return [];
           });
       }
 
 
       getDevices('airpurifier').then((records) => {
-
-        console.log('records: ' + records);
-
         const recordChunks = splitIntoChunks(records, 4);
 
         const rows = recordChunks.map(recordChunk => {
@@ -107,9 +101,6 @@
             <h4 class="text-white">About</h4>
             <p class="text-muted">IoT Devices - Hackathon.</p>
           </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
-          </div>
         </div>
       </div>
     </div>
@@ -135,78 +126,15 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="jumbotron-heading">Devices</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-          etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        </p>
+        <h1 class="jumbotron-heading">Devices Dashboard</h1>
       </div>
     </section>
 
 
 
     <!--  -->
-    <div id="device-list">
-
-    </div>
+    <div id="device-list"></div>
     <!---->
-    <!--
-    <div class="album py-5 bg-light">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Device info</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Device info</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Device info</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
--->
-
     </div>
     </div>
     </div>
