--- a/pages/index.html
+++ b/pages/index.html
@@ -46,7 +46,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      </div><small class="text-muted">9 mins</small></div></div></div>`);
+                      </div></div></div></div>`);
         return component;
       }
 
