Device dashboard integration

--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@
       <div class="col-sm-2">
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a href="/dashboard" class="nav-brand">Monitoring</a>
+              <a href="/dashboard/#" class="nav-brand">Monitoring</a>
             </li>
             <li class="nav-item">
               <a href="/dashboard/#airpurifier" class="nav-link">Air purifier</a>
@@ -45,16 +45,16 @@
               <a href="/dashboard/#light_bulb" class="nav-link">Light bulb</a>
             </li>
             <li class="nav-item">
-              <a class="nav-brand" href="/device_management">Device management</a>
+              <a class="nav-brand" href="/device_dashboard">Device management</a>
             </li>
             <li class="nav-item">
-                <a href="/device_management/#airpurifier" class="nav-link">Air purifier</a>
+                <a href="/device_dashboard/#airpurifier" class="nav-link">Air purifier</a>
               </li>
               <li class="nav-item">
-                <a href="/device_management/#xray" class="nav-link">X-ray</a>
+                <a href="/device_dashboard/#xray" class="nav-link">X-ray</a>
               </li>
               <li class="nav-item">
-                <a href="/device_management/#light_bulb" class="nav-link">Light bulb</a>
+                <a href="/device_dashboard/#light_bulb" class="nav-link">Light bulb</a>
               </li>
           </ul>
       </div>
@@ -84,7 +84,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="/dashboard/services/connectionCache.js"></script>
   <script src="/dashboard/components/chartComponent.js"></script>
-  <script src="/dashboard/dashboard.js"></script>
+  <script src="/dashboard/index.js"></script>
 </body>
 
 </html>
