--- a/pages/device_dashboard.html
+++ b/pages/device_dashboard.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="container-fluid">
-        <h1>Monitor connections</h1>
+        <h1>Device management</h1>
         <div class="row" style="margin-top: 20px">
           <div class="col-sm-2">
             <ul class="nav flex-column">
