--- a/pages/index.html
+++ b/pages/index.html
@@ -28,8 +28,7 @@
 
 <body>
   <div class="container-fluid">
-    <h1>Monitor connections</h1>
-    <div class="row" style="margin-top: 20px">
+    <div class="row">
       <div class="col-sm-2">
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -59,6 +58,7 @@
           </ul>
       </div>
       <div class="col-sm-10">
+        <h1>Monitor connections</h1>
         <div class="row">
           <div id="overview_bar"></div>
           <div id="connection_chart"></div>
