Fix for device dashboard

--- a/pages/device_dashboard.html
+++ b/pages/device_dashboard.html
@@ -54,7 +54,10 @@
             <div class="row">
               <div class="col-sm-11">
                 <div class="row">
-                  <div id="overview_bar"></div>
+                  <div class="col-sm-10"><div id="overview_bar"></div></div>
+                  <div class="col-sm-2">
+                    <button id="refresh_button" role="button" class="btn btn-outline-dark">Refresh</button>
+                  </div>
                 </div>
                 <div class="row">
                   <div id="device_dashboard" class="col-sm-11"></div>
